--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
+    "lodash": "^4.17.4",
+    "materialize-css": "^0.98.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
