--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-materialize": "^6.7.2",
     "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
     "lodash": "^4.17.4",
-    "materialize-css": "^0.98.1",
+    "materialize-css": "^0.98.2",
+    "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
